@@ -1,14 +1,20 @@
+Sat Aug 21 12:53:05 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tests/Missing_Svc_Conf_Test.cpp:
+        
+          Added a descriptive comment block to the source.
+
 Fri Aug 20 13:29:22 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * ace/Service_Gestalt.cpp:
 
           One more shot at fixing the behavior of the service configurator
           in the face of missing defaulted svc.conf file.
-        
+
         * tests/Missing_Svc_Conf_Test.cpp:
         * tests/run_test.lst:
         * tests/tests.mpc:
-        
+
           Added a proper test to ensure changes to this behavior are caught
           in the future.
 
